Used regex to finish the lab

--- a/Views/File/Index.cshtml
+++ b/Views/File/Index.cshtml
@@ -1,12 +1,19 @@
 @{
     ViewData["Title"] = "Files Page";
     var Files = ViewBag.Files as string[];
+    var regex = new System.Text.RegularExpressions.Regex(@"File(\d+)\.txt$");
 }
 
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
     @foreach (var file in Files)
     {
-        <p><a href="@Url.Action("Download", "Home", new { file })">@file</a></p>
+        var match = regex.Match(file);
+        if (match.Success)
+        {
+            var id = match.Groups[1].Value;
+            var fileName = System.IO.Path.GetFileNameWithoutExtension(file);
+            <p><a asp-controller="File" asp-action="Details" asp-route-id="@id">@fileName</a></p>
+        }
     }
 </div>
